--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,8 @@ header {
 }
 
 header h1 {
-	/* float: left;
-	margin: 0; */
+	/* float: left; */
+	margin: 0; 
 	padding: 38px 0 20px 0;
 	width: 100%;
 	border-bottom: 3px solid #77a466;
@@ -75,7 +75,7 @@ header h1 span {
 
 header nav {
 	/* float: right; */ 
-	padding: 20px 0; 
+	padding: 0  0 20px 0; 
 }
 
 header nav ul {
@@ -137,13 +137,13 @@ header nav ul li a {
 
 .section-one {
 	/* width: 29%; */
-	border-bottom: 5px solid #EEE;
 }
 
 .section-two {
 	/* width: 42%; 
 	border-left: 5px solid #EEE;
 	border-right: 5px solid #EEE; */
+	border-top: 5px solid #eeeeee;
 	border-bottom: 5px solid #EEE;
 }
 
@@ -180,4 +180,58 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: 0.875rem;
+}
+
+/********** TABLET STYLES **********/
+@media all and (min-width: 768px) {
+
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+	.section-one,
+	.section-three {
+		width: 26%;
+	}
+	.section-two {
+		width: 40%;
+		border-top: none;
+		border-bottom: none;
+		border-left: 5px solid #eeeeee;
+		border-right: 5px solid #eeeeee;
+		padding: 0 30px;
+	}
+
+}
+
+
+/********** DESKTOP STYLES **********/
+@media all and (min-width: 1200px) {
+	body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0;
+	}
+
+	header h1 {
+		width: 30%;
+		border-bottom: none;
+		text-align: left;
+		padding: 0;
+	}
+
+	header nav {
+		width: 21%;
+		padding: 20px 0;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+		gap: 0 20px;
+	}
+
 }
